# zxing

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists-wasm.txt  CMakeLists.txt  Makefile  QRCODE_TEST_REPORT.md  QR_CODE_SCAN_REPORT.md  README-WASM-INTEGRATION.md  README-WASM.md  README.md  REAL_DATA_TEST_REPORT.md  TEST_SUMMARY.md  WASM_BUILD_WARNINGS_FIX.md  benchmark_test.go  build.bat  build.ps1  build.sh  build_all.ps1  build_wasm.ps1  build_wasm.sh  build_wasm_demo.ps1  go.mod  go.sum  prompt.md  test_build.ps1  test_cmake.sh  test_integration.ps1  test_simple.go  test_wasm.go  zxing.c  zxing.cpp  zxing.go  zxing.h  zxing_internal.h  zxing_test.go
.github/workflows/: benchmark.yml  build.yml  check-upstream.yml  release.yml
cmd/: README.md
cmd/advanced/: main.go
cmd/basic/: main.go
cmd/batch_decode/: go.mod  main.go
cmd/compare_test/: main.go
cmd/cshared/: main.go
cmd/detailed_scan/: main.go
cmd/raw_scan/: main.go
cmd/real_scan/: main.go
cmd/robust_test/: main.go
cmd/scan_qr/: main.go
cmd/server/: Dockerfile  README.md  docker-compose.yml  main.go
cmd/server/templates/: index.html
cmd/simple_test/: main.go
cmd/test_backends/: main.go
cmd/test_images/: main.go
cmd/test_real_data/: main.go
cmd/test_simple/: test_simple.go
cmd/wasm-example/: main.go
cmd/zxing-cli/: main.go
doc/: cli-test-report.md  implementation-summary.md  linux-build-guide.md  linux-commands.txt  linux-quick-start.sh  phase1-summary.md  project-goal-analysis.md  requirements-analysis-2026-07-04.md  requirements-analysis.md  requirements.md  task-completion-summary.md  wasm-integration-guide.md
docker/: Dockerfile.linux-build  Dockerfile.win-build  mingw-w64-toolchain.cmake  patch_using_enum.sh
docs/superpowers/plans/: 2026-07-04-production-ready.md  2026-07-16-wazero-runtime-fix.md
docs/superpowers/reviews/: 2026-07-04-production-ready-design-review.md  2026-07-05-cmd-build-implementation-review-2.md  2026-07-05-cmd-build-implementation-review.md
docs/superpowers/specs/: 2026-07-04-production-ready-design.md  2026-07-16-wazero-runtime-fix-design.md
examples/advanced/: main.go
examples/basic/: main.go
examples/zxing-cli/: main.go
include/: zxing.h
lib/: BUILDINFO.md
lib/linux-x64/: BUILDINFO
lib/windows-x64/: BUILDINFO
pkg/wasm/: runtime.go  runtime_stub.go  runtime_wazero.go  runtime_wazero_test.go
pkg/zxing/: cgo_binding_linux.go  cgo_binding_windows.go  cgo_impl.go  cgo_impl_new.go  cgo_stub.go  config.go  factory.go  interface.go  universal_impl.go  wasm_impl.go  wasm_impl_js.go  wasm_stub.go  zxing_test.go
scripts/: analyze_benchmark.py.bak  batch_decode.go  benchmark.bat  benchmark.sh  benchmark.sh.bak  build-wasm.sh  build_cli_windows.ps1  build_deb.sh  build_rpm.sh  build_static_linux.sh  build_static_windows.ps1  build_wasm_save.ps1  build_wasm_save.sh  fix_image_extensions.go  fix_image_extensions.py  fix_image_extensions.sh  verify_libs.ps1  verify_libs.sh
src/: zxing.cpp  zxing_internal.h
test_windows/: main.go
testdata/: test.go
wasm/: README.md  build.bat  build.sh  build_demo.sh  build_simple.bat  test.html  test_simple.html  wrapper.cpp  zxingwrapper.js  zxingwrapper.wasm
